--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ path = "src/bin/weechess.rs"
 anyhow = "1.0.75"
 bitvec = "1.0.1"
 clap = { version = "4.4.11", features = ["derive"] }
+console = "0.15.7"
 indoc = "2.0.4"
 num_enum = "0.7.1"
 regex = "1.10.2"
+rustyline = "13.0.0"
+shlex = "1.2.0"
