--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ bitvec = "1.0.1"
 clap = { version = "4.4.11", features = ["derive"] }
 console = "0.15.7"
 indoc = "2.0.4"
+lazy_static = "1.4.0"
 num_enum = "0.7.1"
 regex = "1.10.2"
 rustyline = "13.0.0"
