--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ console = "0.15.7"
 indoc = "2.0.4"
 lazy_static = "1.4.0"
 num_enum = "0.7.1"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
 regex = "1.10.2"
 rustyline = "13.0.0"
 shlex = "1.2.0"
