--- a/weechess-engine/Cargo.toml
+++ b/weechess-engine/Cargo.toml
@@ -10,11 +10,13 @@ doctest = false
 
 [dependencies]
 anyhow = "1.0.75"
+ciborium = "0.2.1"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 weechess_core = { path = "../weechess-core" }
 
 [build-dependencies]
+ciborium = "0.2.1"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 weechess_core = { path = "../weechess-core" }
