--- a/weechess-engine/Cargo.toml
+++ b/weechess-engine/Cargo.toml
@@ -13,6 +13,7 @@ anyhow = "1.0.75"
 ciborium = "0.2.1"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
+rayon = "1.8.0"
 weechess_core = { path = "../weechess-core" }
 
 [build-dependencies]
